[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serde
serde = { version = "^1.0.0", features = ["derive"]}
serde_bencode = "^0.2.4"
serde_bytes = "^0.11.14"
serde_urlencoded = "^0.7.1"
serde-binary = "^0.5.0"

# Num
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"

# Utils
hex = "^0.4.3"
sha1 = "^0.10.6"
urlencoding = "2.1.3"
format-bytes = "^0.3.0"
bit-vec = "^0.6.3"

reqwest = { version = "^0.12.4", features = ["blocking"]}