[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serde
serde = { version = "^1.0.0", features = ["derive"]}
serde_bencode = "^0.2.4"
serde_bytes = "^0.11.14"

# Utils
hex = "^0.4.3"
sha1 = "^0.10.6"
urlencoding = "2.1.3"
bit-vec = "^0.6.3"

reqwest = { version = "^0.12.4", features = ["blocking"]}